Updated version numbers and links